@@ -10,6 +10,7 @@ package process
 import (
 	"os"
 	"os/exec"
+	"path/filepath"
 
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/core/logger"
 )
@@ -18,6 +19,7 @@ func getCmd(logger *logger.Logger, path string, env []string, uid, gid int, arg 
 	cmd := exec.Command(path, arg...)
 	cmd.Env = append(cmd.Env, os.Environ()...)
 	cmd.Env = append(cmd.Env, env...)
+	cmd.Dir = filepath.Dir(path)
 
 	return cmd
 }
