@@ -18,6 +18,7 @@
 - Fixed merge of config {pull}17399[17399]
 - Handle abs paths on windows correctly {pull}17461[17461]
 - Improved cancellation of agent {pull}17318[17318]
+- Fixed process spawning on Windows {pull}17751[17751]
 
 ==== New features
 
